<resources>
    <string name="app_name">Wifi settings</string>
    <string name="car_service_name">Wifi settings</string>
    <string name="demo_title"> </string>
    <string name="menu_debug_title">Debug</string>
    <string name="menu_exlap_stats_log_title">Show log</string>
    <string name="menu_test_notification_title">Test notification</string>
    <string name="notification_channel_name">Car</string>
    <string name="notification_channel_description">Notifications displayed in Android Auto.</string>

    <!--wifi Activity-->
    <string name="no_wifi">No Wi-Fi networks available</string>
    <string name="please_wait">Please wait…</string>
    <string name="turn_on_wifi">Turn on Wi-Fi to connect</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="cancel">Cancel</string>
    <string name="connect">Connect</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="checking">Checking…</string>
    <string name="need_permission">Need Permission</string>

    <string name="add_network">Add Network</string>
    <string name="network_name">Network name</string>
    <string name="enter_the_ssid">Enter the SSID</string>
    <string name="none">None</string>
    <string name="wep">WEP</string>
    <string name="wpa">WPA/WPA2</string>



    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- service package -->
    <string name="str_sev_package">com.nforetek.bt.customer.service</string>
    <!-- service action -->
    <string name="str_sev_action">com.nforetek.bt.CUSTOMER_SERVICE</string>
    <string name="description">service_permission</string>
    <string name="label">personprovider_permission_service_permission</string>
    <string name="string1">Please use it after connecting to the device</string>
    <string name="string2">Connect</string>
    <string name="string3">Records</string>
    <string name="string4">Contacts</string>
    <string name="string16">No contacts,</string>
    <string name="string5">Phone Book Sync</string>
    <string name="string6">Phone Book Sync...</string>
    <string name="string7">Sync</string>
    <string name="string8">Are you sure you want to disconnect?</string>
    <string name="string9">You can access the settings for connection devices.</string>
    <string name="string10">Disconnect</string>
    <string name="string11">Cannel</string>
    <string name="string12">Incoming call...</string>
    <string name="string13">Calling...</string>
    <string name="string14">Hang up...</string>
    <string name="string15">Dial…</string>
    <string name="string17">Incoming call</string>
    <string name="string18">Dial</string>
    <string name="string19">yesterday</string>
    <string name="string20">Call</string>


    <string name="q">q</string>
    <string name="w">w</string>


    <string name="e">ק</string>

    <string name="r">ר</string>
    <string name="t">א</string>
    <string name="y">ט</string>
    <string name="u">ו</string>
    <string name="i">ן</string>
    <string name="o">ם</string>
    <string name="p">פ</string>
    <string name="a">ש</string>
    <string name="s">ד</string>
    <string name="d">ג</string>
    <string name="f">כ</string>
    <string name="g">ע</string>
    <string name="h">י</string>
    <string name="j">ח</string>
    <string name="k">ל</string>
    <string name="l">ך</string>
    <string name="l1">ף</string>
    <string name="z">ז</string>
    <string name="x">ס</string>
    <string name="c">ב</string>
    <string name="v">ה</string>
    <string name="b">נ</string>
    <string name="n">מ</string>
    <string name="m">צ</string>
    <string name="m1">ת</string>
    <string name="m2">ץ</string>
</resources>
